Changelog
=========

2.14 - Unreleased
-----------------

* Remove extra quotes in a plone_pas template file, which were
  generating a syntax error.
  [dukebody]


2.13 - October, 3rd
-------------------

* Pinned Cheetah to <= 2.2.1 and eliminated install_requires for elementtree
  (markdown not a requirement for Cheetah 2.2.1). Allows zopeskel to easy_install
  with python 2.4. Can remove pinning when markdown is fixed.
  [cbcunc]

* plone3_buildout: added 'fake-zope-eggs = true' to the zope2 part, as
  otherwise you get e.g. 'ImportError: No module named ImplPython'
  when using a plone.recipe.zope2install < 3.0, like pinned by Plone
  3.2 versions.cfg.
  [maurits]

* Make the Plone 3 buildout template default to Plone 3.3.1.
  [dukebody]

* Modify HISTORY.txt convention in basic_namespace and nested_namespace
  templates. Use now "1.0dev (unreleased)" and '-' for changelog items.
  [vincentfretin]

* Fix trove classifiers list url in all setup.py_tmpl
  [vincentfretin]

* Remove old import_steps.xml from profiles/default/ in plone3_theme template,
  the various import step in registered in profile.zcml now.
  [vincentfretin]

* For plone3_theme, plone3_portlet an archetype templates,
  start profile version at 1 to follow current convention.
  [vincentfretin]

* Remove http://download.zope.org/ppix/,
  http://download.zope.org/distribution/, and 
  http://effbot.org/downloads from find-links in the plone3_buildout template.
  Only Pypi or http://dist.plone.org/release/${plone_version}
  is really needed.
  Add http://dist.plone.org/thirdparty for alternative location for 
  elementree, PILwoTk, markdown, python-ldap.
  [vincentfretin]


2.12 - September 23rd, 2009
---------------------------

* Remove the options fake-zope-eggs=true and
  additional-fake-eggs=ZODB3 in the plone3_buildout template since
  fake-zope-eggs is enabled by default in
  plone.recipe.zope2install>=3.0, with ZODB3 among the default "fake
  zope eggs".  [dukebody]
