@@ -17,6 +17,8 @@ Contributors:
       and some after work from the 2008 DC sprint.
 
     - Emanuel Sartor : added test infrastructure to the archetype template.
+    
+    - Matthew Wilkes : Plone buildout refactoring and general maintenance.
 
 See HISTORY for full details.
 
