@@ -4,6 +4,9 @@ Changelog
 2.14 - Unreleased
 -----------------
 
+* Use distribute for Plone buildouts
+  [MatthewWilkes]
+
 * Remove extra quotes in a plone_pas template file, which were
   generating a syntax error.
   [dukebody]
